# raster2poly

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: requirements.txt
docs/notebooks/: raster2poly_cookbook.ipynb
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  cookbook.rst  index.rst  installation.rst  introduction.rst  methods.rst  quickstart.rst
src/raster2poly/: __init__.py  classifier.py
tests/: test_classifier.py
