[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raster2poly"
version = "0.1.0"
description = "Classify rasters (KMeans, Random Forest, DN rules) and vectorise to polygons."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Ismail Harkat" }]
keywords = ["raster", "classification", "vectorise", "polygons", "remote-sensing", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.22",
    "rasterio>=1.3",
    "geopandas>=0.12",
    "scikit-learn>=1.2",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/geoharkat/raster2poly"
Documentation = "https://raster2poly.readthedocs.io"
Issues = "https://github.com/geoharkat/raster2poly/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/raster2poly"]

[tool.ruff]
target-version = "py39"
line-length = 100
